# blue_archive_auto_script

./: .editorconfig  .gitignore  404.html  ATX.apk  CLAUDE.md  CLI.html  CLI.md  CNAME  README.md  about.html  activity_solver.py  android_main.py  api-examples.html  auto_translate.py  backup.txt  build.bat  cafe.py  cli.example.py  collect_daily_reward.py  common_fight_solve.py  config.html  definemytime.py  demo1.py  develop_format.html  device_connect.py  device_operation.html  docker-compose.yaml  dockerfile  docs.html  downloads.html  energy_clear.py  entrypoint.sh  error.html  faq.html  features.html  get-pip.py  get_location.py  hashmap.json  i18n.html  i18n.pro  (+33 more)
.devcontainer/: devcontainer.json
__pycache__/: activity_solver.py  demo1.py  energy_clear.py  get_location.py  log.py  ocr.py  schedule.py  screen_operation.py  to_pages.py
assets/: CLI.md.0C5dqp0_.js  CLI.md.0C5dqp0_.lean.js  CLI.md.0m3qPx0F.js  CLI.md.0m3qPx0F.lean.js  CLI.md.33R_en7_.js  CLI.md.33R_en7_.lean.js  CLI.md.3aIrF9-8.js  CLI.md.3aIrF9-8.lean.js  CLI.md.5DRuwNae.js  CLI.md.5DRuwNae.lean.js  CLI.md.6M7ZQhQM.js  CLI.md.6M7ZQhQM.lean.js  CLI.md.6PUas7qz.js  CLI.md.6PUas7qz.lean.js  CLI.md.7VFv1l61.js  CLI.md.7VFv1l61.lean.js  CLI.md.865dco4t.js  CLI.md.865dco4t.lean.js  CLI.md.9oLGvJ1e.js  CLI.md.9oLGvJ1e.lean.js  CLI.md.Ahb82Lrp.js  CLI.md.Ahb82Lrp.lean.js  CLI.md.AjBNGDZj.js  CLI.md.AjBNGDZj.lean.js  CLI.md.C9316bks.js  CLI.md.C9316bks.lean.js  CLI.md.D5Wh3x4E.js  CLI.md.D5Wh3x4E.lean.js  CLI.md.DZvHRkxQ.js  CLI.md.DZvHRkxQ.lean.js  CLI.md.Eceh5l7i.js  CLI.md.Eceh5l7i.lean.js  (+23383 more)
core/: ocr.py  (+24 more)
(+1650 files in other folders)
