[project]
name = "blue_archive_auto_script"
version = "1.1.3"
description = "用于实现蔚蓝档案自动化"
authors = [{ name = "pur1fying", email = "2274916027@qq.com" }]
dependencies = [
    "lmdb",
    "PyQt5",
    "numpy",
    "flask",
    "cnocr",
    "imgaug",
    "onnxruntime",
    "adbutils<=2.2.1",
    "uiautomator2",
    "opencv-python-headless",
    "PyQt-Fluent-Widgets",
    "paddlepaddle",
]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "GPL-3.0-only" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
