[project]
name = "blue_archive_auto_script"
version = "1.4.3"
description = "用于实现蔚蓝档案自动化"
authors = [{ name = "pur1fying", email = "2274916027@qq.com" }]
dependencies = [
    "lmdb",
    "pyqt5==5.15.11",
    "pyqt5-qt5==5.15.2",
    "numpy < 2.0",
    "av == 12.0.0",
    "imgaug",
    "win11toast",
    "adbutils == 2.2.1",
    "uiautomator2 == 2.16.23",
    "opencv-python == 4.8.1.78",
    "PyQt-Fluent-Widgets == 1.2.0",
    "pyinstaller",
    "requests",
    "dulwich",
    "psutil",
    "tqdm",
    "tomli == 2.2.1",
    "tomli_w == 1.2.0",
    "PyAutoGUI == 0.9.54",
    "mss == 10.0.0",
    "rich >= 14.2.0"
]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "GPL-3.0-only" }
